--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
 
     <link rel="stylesheet" href="styles.css" />
-
+    <script src="./script.js" defer></script>
     <title>Convert</title>
   </head>
   <body>
